--- a/frontend/src/components/UpsertTodoItem/UpsertTodoItem.css
+++ b/frontend/src/components/UpsertTodoItem/UpsertTodoItem.css
@@ -1,8 +1,9 @@
-.create-todo {
+.upsert-todo {
     display: flex;
+    height: 24px;
 }
 
-.create-todo__input {
+.upsert-todo__input {
     width: auto;
     flex: 1;
     margin-top: -10px;
@@ -11,18 +12,20 @@
     padding: 10px;
     border: none;
     outline: none;
+    font-size: 16px;
 }
 
-.create-todo__button {
+.upsert-todo__button {
     appearance: none;
     -webkit-appearance: none;
     background: none;
     border: none;
+    cursor: pointer;
     font-weight: bold;
     color: #884747;
     padding: 0;
 }
 
-.create-todo__button:disabled {
+.upsert-todo__button:disabled {
     opacity: 0.5;
 }
